<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="491dp"
        android:layout_height="733dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pexels_valeria_boltneva_842571" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/bn_home"
            style=' style="?android:attr/buttonBarButtonStyle"'
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:drawableTop="@drawable/ic_home_black_24dp"
            android:drawableTint="#FC8B56"
            android:onClick="bn_home_click"
            android:text="@string/bn_home"
            android:textAllCaps="false"
            android:textColor="#FC8B56"
            android:textSize="10sp" />

        <Button
            android:id="@+id/bn_create"
            style=' style="?android:attr/buttonBarButtonStyle"'
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:backgroundTint="#FFFFFF"
            android:drawableTop="@drawable/ic_add_black_24dp"
            android:drawableTint="@color/colorTextDark"
            android:onClick="bn_create_click"
            android:text="@string/bn_new"
            android:textAllCaps="false"
            android:textColor="@color/colorTextDark"
            android:textSize="10sp" />

        <Button
            android:id="@+id/bn_list"
            style=' style="?android:attr/buttonBarButtonStyle"'
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:backgroundTint="#FFFFFF"
            android:drawableTop="@drawable/ic_book_black_24dp"
            android:drawableTint="@color/colorTextDark"
            android:onClick="bn_list_click"
            android:text="@string/bn_list"
            android:textAllCaps="false"
            android:textColor="@color/colorTextDark"
            android:textSize="10sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="129dp"
        android:layout_height="193dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_local_dining_black_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>